--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.13"
 dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.3",
+    "numpy<=2.2",
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
+    "shap>=0.48.0",
     "tabulate>=0.9.0",
 ]
