--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "scikit-learn>=1.7.1",
     "seaborn>=0.13.2",
     "shap>=0.48.0",
+    "streamlit>=1.47.1",
     "tabulate>=0.9.0",
 ]
